# drw

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  drw.c  drw.h  drw.h.orig  readme.md
contrib/fonts/: asteroids_font.c
src/: d_font_asteroids.c  d_font_asteroids.h  d_font_ftgl.c  d_font_ftgl.h  d_font_ftgles.h  d_font_hershey.c  d_font_hershey.h  d_font_hpvec.c  d_font_hpvec.h  d_point.c  d_point.h  d_primitives.c  d_primitives.h  d_render.c  d_render.h  d_wobject_ops.c  d_wobject_ops.h  drw_config.h  drw_config.h.orig  drw_dummy.h  drw_export.c  drw_export.c.orig  drw_export.h  drw_ext.h  drw_font_asteroids.c  drw_font_asteroids.h  drw_font_ftgl.c  drw_font_ftgl.h  drw_font_ftgles.cpp  drw_font_ftgles.h  drw_font_hershey.c  drw_font_hpvec.c  drw_gl.h  drw_log.c  drw_log.h  drw_platform.h  drw_point.c  drw_point.c.orig  drw_point.h  drw_primitives.c  (+17 more)
src/dummy/grdn/src/env/: g_transform.h
src/dummy/r4/src/core/: r_color.h
src/dummy/r4/src/geo/: r_gpc.h  r_line.h  r_object.h  r_point.h  r_rect.h  r_transform.h  r_vec.h
src/dummy/wsh/src/geo/: wsh_line.h  wsh_object.h
src/ext/: drw_ext_gpc.c  drw_ext_gpc.c.orig  drw_ext_gpc.h
src/hacks/: Header.h  drw_hacks.h  drw_snoop.c  drw_snoop.h
src/type/: drw_font_asteroids.c  drw_font_ftgl.c  drw_font_ftgl.h  drw_font_ftgles.cpp  drw_font_hershey.c  drw_font_hershey.h  drw_font_hpvec.c  drw_font_hpvec.h  drw_text.c  drw_text.h  drw_text_asteroids.c  drw_text_asteroids.h  drw_text_ftgl.c  drw_text_ftgl.h  drw_text_ftgles.cpp  drw_text_ftgles.h  drw_text_hershey.c  drw_text_hershey.h  drw_text_hpvec.c  drw_text_hpvec.h  drw_type.c  drw_type.h  drw_type_asteroids.c  drw_type_asteroids.h  drw_type_ftgl.c  drw_type_ftgl.h  drw_type_ftgles.cpp  drw_type_ftgles.h  drw_type_hershey.c  drw_type_hershey.c.orig  drw_type_hershey.h  drw_type_hpvec.c  drw_type_hpvec.h  rename.py  rfactor.py
test/: CMakeLists.txt  test_drw.c
work/: drw.def  drw.sln  drw.vcxproj  drw.vcxproj.filters  drw_d.def
work/drw-ios.xcodeproj/: project.pbxproj
work/drw-ios.xcodeproj/xcuserdata/andrew.macfarlane.xcuserdatad/xcschemes/: drw-release.xcscheme  drw.xcscheme  xcschememanagement.plist
work/drw-ios.xcodeproj/xcuserdata/vs.xcuserdatad/xcschemes/: drw-release.xcscheme  drw.xcscheme  xcschememanagement.plist
work/drw-shared.xcodeproj/: project.pbxproj
work/drw-shared.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
work/drw-shared.xcodeproj/xcuserdata/vs.xcuserdatad/xcschemes/: xcschememanagement.plist
work/drw.xcodeproj/: project.pbxproj
work/drw.xcodeproj/project.xcworkspace/xcuserdata/vs.xcuserdatad/: UserInterfaceState.xcuserstate
work/drw.xcodeproj/xcuserdata/andrew.macfarlane.xcuserdatad/xcschemes/: xcschememanagement.plist
work/drw.xcodeproj/xcuserdata/vs.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
work/drw.xcodeproj/xcuserdata/vs.xcuserdatad/xcschemes/: drw-release.xcscheme  drw-shared.xcscheme  drw.xcscheme  xcschememanagement.plist
